2019-1/231/users/4233/executions/1580_1333.log
== TEST (2019-03-14 10:23:01) 
-- CODE:
expressao = print(30 - (3 ** 2) + 8 // (3 ** 2) * 10)
				print(30 - 9 + (8 // (9 * 10)))
print(expressao)
-- ERROR:
File "XXXX", line 2
    print(30 - 9 + (8 // (9 * 10)))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 10:33:32) 
-- CODE:
expressao = print(30 - (3 ** 2) + 8 // (3 ** 2) * 10)
				      (30 - 9 + (8 // (9 * 10)))
print(30 - 9 + (8//90))
-- ERROR:
File "XXXX", line 2
    (30 - 9 + (8 // (9 * 10)))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 10:49:52) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10
print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.218209
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
